[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/back_style_1_001.wav" type="AudioStream" id=1]
[ext_resource path="res://addons/audio-manager/AudioManager.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/back_style_1_003.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/back_style_1_002.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/Sweet Treats.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/Beach House.wav" type="AudioStream" id=6]
[ext_resource path="res://Test.gd" type="Script" id=8]

[node name="Test" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioManager" parent="." instance=ExtResource( 2 )]
music = [ ExtResource( 5 ), ExtResource( 6 ) ]
effects = [ ExtResource( 1 ), ExtResource( 4 ), ExtResource( 3 ) ]

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
margin_left = 425.0
margin_top = 254.0
margin_right = 598.0
margin_bottom = 346.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
margin_right = 92.0
margin_bottom = 92.0

[node name="PlayMusic" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer"]
margin_right = 92.0
margin_bottom = 20.0
text = "Play Music"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayMusic2" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 92.0
margin_bottom = 44.0
text = "Play Music "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMusic" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 92.0
margin_bottom = 68.0
text = "Pause Music"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StopMusic" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 92.0
margin_bottom = 92.0
text = "Stop Music"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
margin_left = 96.0
margin_right = 173.0
margin_bottom = 92.0

[node name="PlayEffect" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer2"]
margin_right = 77.0
margin_bottom = 20.0
text = "Play Effect"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayEffect2" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer2"]
margin_top = 24.0
margin_right = 77.0
margin_bottom = 44.0
text = "Play Effect"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayEffect3" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer2"]
margin_top = 48.0
margin_right = 77.0
margin_bottom = 68.0
text = "Play Effect"
__meta__ = {
"_edit_use_anchors_": false
}
